minor improvements after the code review
# Conflicts:
#	src/main/java/practice/StreamPractice.java